<resources>
    <string name="app_name">Recipe Book</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="my_recipes">My recipes</string>
    <string name="all_recipes">All recipes</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="no_name">No name</string>
    <string name="description">Description</string>
    <string name="calories">Calories</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="on">On</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servings">Servings</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
</resources>