<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/data">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/user_64"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/kitchen_book_black_white"
            android:title="@string/my_recipes" />
        <item
            android:id="@+id/nav_all_recipes"
            android:icon="@drawable/list"
            android:title="@string/all_recipes" />

    </group>
    <group android:id="@+id/tools">

        <item
            android:id="@+id/nav_type_register"
            android:icon="@drawable/register"
            android:title="@string/register" />

        <item
            android:id="@+id/nav_type_login"
            android:icon="@drawable/sign_in"
            android:title="@string/log_in" />

        <item
            android:id="@+id/nav_type_logout"
            android:icon="@drawable/sign_out"
            android:title="@string/log_out" />
    </group>

    <group android:id="@+id/other">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/help_and_feedback" />
    </group>
</menu>