<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddRecipeFragment">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/recipeView"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:id="@+id/recipeViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/name"
            android:textSize="40sp">
        </TextView>
        <EditText
            android:id="@+id/recipeAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="40sp">
        </TextView>
        <EditText
            android:id="@+id/recipeAddDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textSize="40sp">
        </TextView>
        <EditText
            android:id="@+id/recipeAddCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servings"
            android:textSize="40sp">
        </TextView>
        <EditText
            android:id="@+id/recipeAddServings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <Button
            android:id="@+id/save_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="right"
            ></Button>
    </LinearLayout>
</FrameLayout>